refactor JavaScript variable declarations for improved readability and organization; comment out unused CSS styles for future reference

--- a/project/style.css
+++ b/project/style.css
@@ -16,15 +16,15 @@ body{
   color: #fff;
   background: #3C87FF;
 }
-.wrapper{
+/* .wrapper{
   max-width: 405px;
   padding: 28px 0 30px;
   margin: 137px auto;
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-}
-.task-input{
+} */
+/* .task-input{
   height: 52px;
   padding: 0 25px;
   position: relative;
@@ -188,7 +188,7 @@ body{
 }
 .settings li i{
   padding-right: 8px;
-}
+} */
 
 @media (max-width: 400px) {
   body{
